code/tui/src/app/inline/snapshots/app__inline__tests__approval_restored_after_panel.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: frame
---
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
┌Approval required───────────────────────────────┐
│Run the requested command?                      │
│Process spawn  ·  cargo test                    │
│> Approve once                                  │
│  Decline                                       │
│                                                │
└────────────────────────────────────────────────┘
                                                  
                                Enter to confirm
