code/tui/src/app/inline/snapshots/app__inline__tests__config_closed.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: "text(&render(&app, 100, 32))"
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
>                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ⏸ Manual
