code/tui/src/app/inline/snapshots/app__inline__tests__dictation_preparation.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: text(&buffer)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                              Listening. Press /voice to stop.  
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  Dictation · checking model files · ctrl+c to stop
