code/tui/src/app/inline/snapshots/app__inline__tests__inline_running_tip_after_language_change.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: localized
---
                                                                                
    ▄  ▄     Ash Code v0.1.0                                                    
  ▗█▛██▜█▖   Automatic model                                                    
  ▝▜████▛▘   .                                                                  
    ▝  ▘                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
⠋ 正在处理 · 0m 09s 总计 · ctrl+c 可中断                                        
└ 技巧：复杂任务可以请 Ash 先列出步骤                                           
                                                                                
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ 请求权限
