code/tui/src/app/inline/snapshots/app__inline__tests__input.snap
---
source: code/tui/src/app/inline/frame_tests.rs
expression: text(&buffer)
---
                                                                                
    ▄  ▄     Ash Code v0.1.0                                                    
  ▗█▛██▜█▖   Automatic model                                                    
  ▝▜████▛▘   .                                                                  
    ▝  ▘                                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> 继续检查终端历史                                                              
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ ask permissions on
